Add simple listener interfaces